<resources>
    <string name="url">https://housing.ucdavis.edu/dining/menus/dining-commons/segundo/</string>
    <string name="app_name">MyApp3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Menu</string>
    <string name="title_notifications">Setting</string>
    <string name="title_breakfast">Breakfast</string>
    <string name="title_lunch">Lunch</string>
    <string name="title_dinner">Dinner</string>
    <string name="action_settings">Settings</string>
    <string name="large_text1">
        "Chicken Poblano Tacos \n Tacos filled with shredded chicken, sauteed Poblano and bell peppers, onions and cheese on a fliour tortilla. With a side of roasted salsa \n Dairy/Gluten/Soybean Oil/Wheat \n
Aloo Gobi \n Spicy potato and cauliflower curry featuring warm aromatic spices of termeric, cumin , and garam masala \n Soybean Oil \n
Sticky Rice \n Steamed white calrose rice \n No Major Allergens \n
Loaded Carne Asada Burrito Bowl \n Loaded burrito bowl with Mexican rice, pinto beans, and Carne Asada topped with tomatillo avocado sauce \n No Major Allergens \n
Quinoa \n A rice alternative \n No Major Allergens \n
Choley \n A rice alternative \n No Major Allergens \n
Spring Greens and Berries || Strawberry Jalapeno Mint Vinaigrette \n A vegan alternative \n No Major Allergens \n
Buffalo Chickpea Burger \n House-made buffalo chicken patty on a sesame bun \n Gluten/Sesame/Soybean Oil/Wheat \n
Shoestring Fries \n Crisp deep fried thin cut potato fries \n Soybean Oil/*Ingredient prepared in a fryer that`s not allergen-free \n
Chicken Noodle Soup \n Soup with chicken, celery, carrots, and egg noodles. A comforting favorite! \n Egg/Gluten/Wheat \n
Thai Curry Soup \n A medley of potatoes, carrots, and bell peppers in a thai coconut curry broth. \n Soybean Oil/Mushroom/Coconut \n
Spelt and Einkhorn Salad \n Lorem Ipsum \n Soybean Oil/Gluten/Wheat/Alcohol \n
Red Skin Potato Salad with Eggs \n Red Potato sliced delicately in a mix together with hard boiled eggs \n Egg/Soybean Oil \n
Classic Califonira Pasta Salad \n A California style cold pasta salad full of vigorous flavor and energy. \n Gluten/Soybean Oil/Wheat \n
Caesar Salad \n Traditional Caesar salad with Romaine lettuce, Parmesan cheese, croutons, and Caesar dressing \n Dairy/Gluten/Soybean Oil/Tree Nuts/Wheat/Egg/Fish/Soy \n
Deli Bar \n Assorted Meats and Cheeses with your favorite spreads, breads and veggies \n Dairy/Gluten/Soybean Oil/Tree Nuts/Wheat/Egg/Fish/Soy \n
New York Cheese Bars \n Produced in a facility that also uses wheat, milk, eggs, tree nuts, peanuts, soybeans, and fish \n Alcohol [vanilla extract]/Dairy/Egg/Gluten/Soy/Soybean Oil/Wheat \n
Vegan Chocolate Chip Cookie \n A delicious vegan variant of the classic chococalate cookie\n Gluten/Wheat"
    </string>
    <string name="large_text2">
         "Sausage Patties\nGriddled pork sausage patty\nNo Major Allergens\nPork sausage patty (pork, water, salt, spices, dextrose, BHT, citric acid, propyl gallate)\n
Scrambled Eggs\nSoftly scrambled cage-free eggs\nEgg\nCage-free eggs, canola oil\n
Tater Tots\nCrispy fried tater tots.\nSoybean Oil/*Ingredient prepared in a fryer that`s not allergen-free\nTater tot potatoes (potatoes, vegetable oil [soybean, canola, cottonseed, and/or sunflower], Contains less than 2% of dextrose, sea salt, disodium dihydrogen pyrophosphate), canola fryer oil\n
House Roasted Salsa\nSpicy chili peppers and Russell Ranch tomatoes roasted with garlic and onion, garnished with fresh cilantro\nNo Major Allergens\nGreen Jalapeno pepper, yellow onion, Russel Ranch tomatoes, red Fresno peppers, Habanero peppers, fresh cilantro, garlic, canola oil, iodized salt\n
Egg Whites\nEgg\nCage-free egg whites, canola oil\n
Tofu Scramble\nScrambled firm tofu marinated in soy sauce.\nSoy/Gluten/Wheat\nOrganic firm tofu, yellow onion, red and green bell peppers, Kikkoman soy sauce (water, soybeans, wheat, salt, sodium benzoate), nutritional yeast, canola oil, garlic, ground turmeric\n
Eggs Fried to Order\nConsuming raw or undercooked eggs may increase risk of foodborne illness, especially for those with certain medical conditions
Egg\nEggs\n
Mushroom and Tomato Omelet\nFluffy omelet with roasted tomatoes, mushrooms, crumbled Feta cheese\nEgg/Mushroom/Dairy\nCage-free eggs, Sherry tomatoes (cherry tomatoes, canola/olive oil blend, kosher salt, Sherry cooking wine [wine, water, neutral spirits, salt, high fructose corn syrup, tartaric acid, caramel color, citric acid, potassium sorbate, potassium metabisulfite], ground black pepper), Balsamic-marinated mushrooms (Crimini mushrooms, Portobello mushrooms, canola/olive oil blend, Balsamic vinegar, fresh rosemary, Shiitake mushrooms, kosher salt, ground black pepper), Feta cheese, canola/olive oil blend\n
Southwestern Omelet\nFluffy omelet filled with ham, roasted pepper and onions and cheese\nDairy/Egg\nCage-free eggs, canola/olive oil blend, smoked deli ham (pork cured with water, salt, sugar, dextrose, sodium phosphate, sodium erythorbate, sodium nitrite), house Chipotle sour cream (Mexican sour cream [cultured cream. Contains less than 2% of whey, modified food starch {corn}, sodium tripolyphosphate, carrageenan, calcium sulfate, locust bean gum, guar gum, sat, gelatin, potassium sorbate], Chipotle Adobo pepper sauce [water, tomato paste, dried Chipotle peppers, distilled vinegar, corn oil. Contains 2% or less of iodized salt, corn starch, onion powder, garlic powder, spices]), milk yellow Cheddar cheese, red and green bell peppers, yellow onion\n
Cheese Omelet\nFluffy egg omelet filled with Cheddar and Monterey Jack cheese\nDairy/Egg\nCage-free eggs, canola/olive oil blend, mild yellow Cheddar cheese (pasteurized milk, cheese culture, salt, enzymes, annatto, potato starch, corn starch, powdered cellulose), Monterey Jack cheese (pasteurized milk, cheese culture, salt, enzymes, potato starch, corn starch and powdered cellulose)\n
Over Night Oats\nRolled oats prepared in soy milk, yogurt, and honey. Granished with fresh berries, almond butter, and our house chocolate granola\nGluten/Wheat/Soy/Dairy/Coconut/Tree Nuts/Peanuts\nRolled oats (vanilla soy milk [filtered water, soybeans, cane sugar, sea salt, gellan gum, natural flavor], old fashioned whole grain rolled oats [per manufacturer, may contain wheat/gluten], coconut milk, vanilla Greek yogurt [cultured grade A nonfat milk, water, cane sugar, corn starch. Contains less than 1% of natural flavors, lemon juice concentrate, carob bean gum, vegetable juice, vitamin d3], steamed quinoa [cooked in water], beet sugar, pure clover honey, chia seeds, ground cinnamon, kosher salt), strawberries, almond butter, house-made chocolate granola (old fashioned whole grain oats [per manufacturer, may contain wheat/gluten], seedless raisins, sunflower seeds, unsalted butter, pure clover honey, peanut-free mixed nuts [cashews, almonds, sunflower oil and/or cottonseed oil, pecans, hazelnuts, dried Brazil nuts, salt], light brown beet sugar, molasses, cocoa powder [processed with alkali. May contain soy and milk]), blueberries, coconut flakes (coconut, sugar, water, propylene glycol, salt, sodium metabisulfite. Per manufacturer, contains tree nuts)\n
Housemade Granola\nCrunchy and sweet granola made with mixed nuts and old fashioned rolled oats\n1/2 cup\nGluten/Wheat/Dairy/Peanuts/Tree Nuts\nOld fashioned rolled oats (per manufacturer, may contain wheat/gluten), sunflower seeds, seedless raisins, unsalted butter, pure clover honey, peanut-free mixed nuts (cashews, almonds, sunflower oil and/or cottonseed oil, pecans, hazelnuts, dried Brazil nuts, salt), light brown beet sugar, molasses\n
Fruit Salad\nA delicious and nutritious blend of fresh fruit!\nNo Major Allergens\nCantaloupe, pineapple, red grapes, honeydew melon\n
Oatmeal\nHot old-fashioned rolled oats (may contain wheat/gluten)\nGluten/Wheat\nWhole grain oats (per manufacturer, may contain wheat/gluten) cooked in water and a pinch of salt.\n
Hard Boiled Eggs\nCage-free, hard boiled eggs\n1 each\nEgg\nCage free eggs\n
Sticky Rice\nSteamed white calrose rice\nNo Major Allergens\nWhite rice, water\n
Mini Everything Bagel\nPer manufacturer, produced in a facility that also uses dairy, eggs, fish, tree nuts, peanuts, wheat, and soy\nGluten/Sesame/Soybean Oil/Wheat\nEnriched unbleached flour (wheat flour, malted barley flour, niacin, reduced iron, thiamine mononitrate, riboflavin, folic acid), water, brown sugar, malt (corn syrup, malt syrup), salt, enzyme (wheat flour, enzymes, ascorbic acid), yeast (yeast, sorbitan monostearate, ascorbic acid), dough improver (wheat flour, monoglycerides, ascorbic acid. Contains 2% or less of enzymes, soybean oil), vinegar, poppy seeds, sesame seeds, sunflower seeds. Per manufacturer, produced in a facility that also uses dairy, eggs, fish, tree nuts, peanuts, wheat, and soy\n
Blueberry Muffin\nProduced in a facility that also uses dairy, eggs, fish, tree nuts, peanuts, wheat, and soy\nDairy/Egg/Gluten/Soy/Soybean Oil/Wheat\nSugar, enriched bleached wheat flour, modified food starch, soybean oil, dry whey, leavening, salt, vital wheat gluten, propylene glycol mono- and diglycerides of fatty acids, mono- and diglycerides, sodium stearoyl lactylate, dextrose, corn starch, tricalcium phosphate, soya flour, dry whole eggs, natural and artificial flavor, water, ascorbic acid, alpha tocopherol, citric acid, blueberries, eggs, soybean oil, water, potassium sorbate. Produced in a facility that also uses dairy, eggs, fish, tree nuts, peanuts, wheat, and soy\n
Maple Raised Donut\nProduced in a facility that also uses milk, eggs, fish, tree nuts, peanuts, wheat, and soybeans.\nAlcohol [vanilla extract]/Dairy/Egg/Gluten/Soy/Soybean Oil/Wheat\nEnriched wheat flour (wheat flour, malted barley flour, enriched with niacin, reduced iron, thiamine mononitrate, riboflavin, folic acid), soybean oil, dextrose. Contains 2% or less of dried whey, sugar, salt, sodium acid pyrophosphate, sodium bicarbonate, defatted soy flour (contains soybean oil, soy lecithin), sodium stearoyl lactylate, cellulose gum, nonfat dry milk, potato flour, soy lecithin, soy protein concentrate, dough conditioner (calcium sulfate, ammonium sulfate, wheat flour, salt), guar gum, dried egg yolks, beta carotene, lactic acid, enzymes, natural flavors, water, yeast (sorbitan monostearate, ascorbic acid), powder sugar (sugar, maltodextrin), palm oil, corn syrup, maple extract (alcohol, sugar, maple syrup, caramel color, water), vanilla extract (alcohol, bourbon vanilla beans, and water). Produced in a facility that also uses dairy, eggs, fish, tree nuts, peanuts, wheat, and soy\n
Apple Cinnamon Donut\nProduced in a facility that also uses dairy, eggs, fish, tree nuts, peanuts, wheat, and soy\nAlcohol [vanilla extract]/Gluten/Soy/Soybean Oil/Wheat\nDonut ingredients: unbleached enriched wheat flour (wheat flour, malted barley flour, niacin, reduced iron, thiamin mononitrate, riboflavin, folic acid), sugar, soybean oil, defatted soy flour, leavening, isolated soy protein, dextrose, wheat starch, salt, natural flavor, cellulose gum, emulsifier, spice, beta carotene, palm oil. Icing ingredients: powdered sugar, apples, corn syrup, vanilla extract, cinnamon. Produced in a facility that also uses dairy, eggs, fish, tree nuts, peanuts, wheat, and soy."
    </string>
</resources>